--- a/css/styles.css
+++ b/css/styles.css
@@ -13,20 +13,41 @@
     .header-node {
         font-size: 16px;
     }
+
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    align-items: center;
+    height: 999999px;
+}
+
+.content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 @media (min-width: 600px) {
     .header-node {
         font-size: 24px;
     }
+
+    .content {
+        width: 80%;
+    }
 }
 
 .navbar {
+    width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     border-bottom: 3px solid var(--text-color);
     /*border-image: linear-gradient(35deg, red, blue) 30;*/
-    padding-bottom: 10px;
+    padding-top: 10px;
+    padding-bottom: 20px;
 
     animation: 5s linear infinite gradient-animation;
 }
@@ -54,6 +75,18 @@
     height: 99999px
 }
 
+
+.content {
+    margin-right: 10px;
+    margin-left: 10px;
+    font-weight: bold;
+}
+
+.content h1 {
+    font-weight: bold;
+    font-size: 56px;
+}
+
 .page-title {
     text-align: center;
     font-size: 74px;
@@ -61,21 +94,22 @@
 }
 
 .scroll-bounds {
-    /*border: 1px solid white;*/
-    height: 240vh;
+    /*height: 240vh;*/
+    padding: 0;
     margin-bottom: 0;
+    height: auto;
+    /*height: 999999px;*/
+    /*overflow: hidden;*/
 }
 
 .content-container {
-    /*border: 1px solid blue;*/
     display: flex;
-    position: relative;
-    top: 0;
-    height: 50vh;
+    height: auto;
+    /*border: 1px solid white;*/
 }
 
 .text-content {
-    /*border: 1px solid yellow;*/
+
     width: 50%;
     display: flex;
     flex-direction: column;
@@ -83,27 +117,42 @@
     padding: 35px;
 }
 
-.content-container img {
-    width: 60%;
-    object-fit: contain;
+.talking-point:last-child {
+    margin-bottom: 50px;
+}
+
+.img-container {
+    width: 50%;
+
+}
+
+.img-container img {
+    object-fit: cover;
+    width: 100%;
+}
+
+.testing {
+    margin: 0;
+    position: absolute;
+    display: none;
+    width: auto;
+    flex-direction: row;
+    z-index: 9999;
+    color: white;
+}
+
+#test-text {
+    color: white;
 }
 
 .test-block {
-    display: none;
     width: 25px;
     height: 25px;
     background-color: red;
-    position: absolute;
     left: 50px;
-    z-index: 9999;
-}
-
-.under-scroll {
-    margin-top: 130vh;
 }
 
 .image-parallax-container {
-    border: 1px solid white;
     margin-top: 10vh;
     width: 100%;
     aspect-ratio: 16/9;
@@ -122,13 +171,86 @@
     transition: transform 0.3 ease-in-out;
 }
 
-.more-text {
-    position: absolute;
-    margin-left: 10px;
-    background-color: rgba(0, 0, 0, 0);
-    margin-top: 1500px;
-    color: black;
-    font-size: 64px;
-    width: 50%;
+.overlay-text {
+    width: 100%;
+    height: 100vh;
+    margin-top: 80vh;
     z-index: 99999;
+    background-color: rgba(0, 0, 0, 0);
+    display: flex;
+    flex-direction: column;
+}
+
+.overlay-text>* {
+    background-color: rgba(0, 0, 0, 0);
+
+}
+
+.overlay-text div {
+    color: black;
+    font-size: 36px;
+    width: 30%;
+    margin-bottom: 20vh;
+}
+
+.overlay-text:nth-child(1) {
+    justify-self: right;
+}
+
+.overlay-text h1 {
+    text-align: center;
+    color: black;
+}
+
+#parallax-range {
+    width: 100%;
+    height: 5px;
+}
+
+.talking-point {
+    margin-bottom: 30vh;
+
+}
+
+.talking-point p {
+    font-weight: bold;
+    font-size: 32px
+}
+
+.talking-point h1 {
+    font-weight: bold;
+    font-size: 56px;
+}
+
+.head-content {
+    display: flex;
+    flex-direction: row;
+    height: auto;
+}
+
+.left {
+    width: 50%;
+    align-content: center;
+    /*display: flex;*/
+    /*flex-direction: row;*/
+    /*justify-content: center;*/
+}
+
+.right {
+    align-content: center;
+    width: 50%;
+}
+
+.head-content-img {
+    width: 100%;
+    object-fit: cover;
+}
+
+.seperator {
+    height: 700px;
+    width: 100%;
+}
+
+#parallax-img {
+    overflow: hidden;
 }
