--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,12 @@
     background-color: var(--bg-color);
 }
 
+img {
+    border: 1px solid hsla(0, 0%, 12%, 1);
+    padding: 15px;
+    border-radius: 15px;
+}
+
 h1,
 h2,
 h3,
@@ -16,8 +22,16 @@ h4,
 h5,
 p,
 div {
-    animation: pageLoadAnimation 4000ms ease-in-out;
+    animation: pageLoadAnimation 2000ms ease-in-out;
 
+}
+
+button {
+    border: none;
+    padding: 0;
+    margin: 0;
+    object-fit: cover;
+    height: 2vh;
 }
 
 @keyframes pageLoadAnimation {
@@ -70,7 +84,7 @@ body {
 
 .navbar {
     width: 100%;
-    height: 5vh;
+    height: auto;
     display: flex;
     justify-content: space-between;
     padding-top: 10px;
@@ -107,7 +121,7 @@ body {
     padding: 5px;
     background-color: rgba(0, 0, 0, 0);
 
-    transition: transform 300ms ease-out;
+    transition: transform 300ms ease-out, border 300ms ease-out;
 }
 
 .header-node:hover {
@@ -296,9 +310,8 @@ h2 {
     display: flex;
     flex-direction: row;
     height: auto;
-    margin-top: 20vh;
+    margin-top: 10vh;
 }
-
 
 
 .left {
@@ -312,6 +325,15 @@ h2 {
     /*justify-content: center;*/
 }
 
+.head-content-title,
+.talking-point-title {
+    font-size: 36px;
+}
+
+.talking-point-info {
+    font-size: 24px;
+}
+
 .right {
     align-content: center;
     width: 50%;
@@ -323,7 +345,7 @@ h2 {
 }
 
 .seperator {
-    height: 350px;
+    height: 25vh;
     width: 100%;
 }
 
@@ -337,8 +359,22 @@ h2 {
     object-fit: cover;
 }
 
+#lightDarkToggleButton {
+    height: 24px;
+    /*border: 1px solid white;*/
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+}
+
 .toggle-button-img {
-    height: 32px
+    margin: 0;
+    height: 0;
+    padding: 0;
+    border: none;
+    height: 24px;
+    object-fit: cover;
+    background-color: rgba(0, 0, 0, 0);
 }
 
 .form-container {
@@ -421,6 +457,11 @@ h2 {
 
 .submit-button {
     margin-top: 30px;
+    border: 1px gray;
+    border-radius: 25px;
+    padding: 15px;
+    cursor: pointer;
+    font-size: 24px;
 }
 
 .signatures {
@@ -439,10 +480,17 @@ h2 {
     padding-left: 25px;
     height: auto;
     margin-bottom: 10vh;
+    text-align: center;
 }
 
+
+
 .more-text {
-    margin-top: 1000px;
+    width: 30vw;
+    margin-top: 1970px;
+    /*margin-top: 130vh;*/
+    font-size: 2vh;
+    color: white;
 }
 
 .modal-thanks {
@@ -455,12 +503,4 @@ h2 {
     color: var(--text-color);
     text-align: center;
     background-color: rgba(0, 0, 0, 0);
-}
-
-button {
-    border: none;
-    padding: 0;
-    margin: 0;
-    object-fit: cover;
-    height: 2vh;
 }
